# amazon_ads_mcp

./: .gitattributes  .gitignore  pyproject.toml
negation_batches/: execute_negation_batch.py
src/amazon_ads_mcp/: __init__.py
src/amazon_ads_mcp/models/: builtin_responses.py
src/amazon_ads_mcp/server/: builtin_tools.py  server_builder.py
src/amazon_ads_mcp/tools/: campaign_management.py
src/amazon_ads_mcp/utils/: http_client.py
tests/unit/: test_archive_sp_ad_group.py  test_archive_sp_campaign.py  test_archive_sp_keyword.py  test_archive_sp_product_ad.py  test_archive_sp_target.py  test_create_sp_campaign.py  test_cross_client_isolation.py  test_list_sp_campaigns_extended_data.py  test_refresh_v1_catalog_writer.py  test_update_sp_campaigns_placement.py
